# empires

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  faction.h  game_logic.c  game_logic.h  hexdrawer.c  hexdrawer.h  main.c  server.c  server.h
src/hex/: CMakeLists.txt  hexcoords.c  hexcoords.h  hexgrid.c  hexgrid.h  interact.c  interact.h
tests/: CMakeLists.txt  test_game_logic.c  test_runner.c
tests/hex/: CMakeLists.txt  test_hex_runner.c  test_hexcoords.c
